add screenshot to README

--- a/README.org
+++ b/README.org
@@ -2,4 +2,6 @@
 
 This is a tool to visualize the OpenSimplexNoise generated in Godot. It can be useful for determining the parameters you pass into the noise generator.
 
+[[./common/assets/screenshot.png]]
+
 MIT Licensed.
